--- a/First-CSS.css
+++ b/First-CSS.css
@@ -5,7 +5,7 @@ body, h1, h2, p {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Helvetica, sans-serif;
 }
 
 /* Style the header */
