--- a/First-CSS.css
+++ b/First-CSS.css
@@ -6,9 +6,11 @@ body, h1, h2, p {
 
 body {
     font-family: Helvetica, sans-serif;
+    color:white;
+    background: rgb(149,17,96);
+    background: linear-gradient(83deg, rgba(149,17,96,1) 0%, rgba(125,32,130,1) 48%, rgba(20,151,177,1) 100%); 
 }
 
-/* Style the header */
 header {
     background-color: #333;
     color: #fff;
@@ -16,14 +18,57 @@ header {
     padding: 1em;
 }
 
-/* Style the main content section */
 main {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
 }
 
-/* Style the footer */
+aside {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(200,200,200);
+    letter-spacing: 1px;
+    font-size: 0.8rem;
+    color:black;
+  }
+  
+  td, th {
+    border: 1px solid rgb(190,190,190);
+    padding: 10px 20px;
+  }
+  
+  th {
+    background-color: rgb(235,235,235);
+  }
+  
+  td {
+    text-align: center;
+  }
+  
+  tr:nth-child(even) td {
+    background-color: rgb(250,250,250);
+  }
+  
+  tr:nth-child(odd) td {
+    background-color: rgb(245,245,245);
+  }
+  
+  caption {
+    padding: 10px;
+  }
+
+  img {
+    border-radius: 50%;
+    max-width: 50%;
+    max-height: 50%
+  }
+
 footer {
     background-color: #333;
     color: #fff;
